<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_about"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_contact"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/menu_contact"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_workout"
        android:title="@string/menu_workout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_trainers"
        android:title="@string/menu_trainers"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_membership"
        android:title="@string/menu_membership"
        app:showAsAction="never" />
</menu>